fix: make application mobile friendly (#14)

--- a/src/routes/authentication/Authentication.styles.scss
+++ b/src/routes/authentication/Authentication.styles.scss
@@ -3,4 +3,14 @@
   width: 900px;
   margin: 30px auto;
   justify-content: space-between;
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+    width: unset;
+    align-items: center;
+  }
+
+  & > *:first-child {
+    margin-bottom: 50px;
+  }
 }
