--- a/src/routes/checkout/Checkout.styles.scss
+++ b/src/routes/checkout/Checkout.styles.scss
@@ -6,6 +6,10 @@
   align-items: center;
   margin: 50px auto 0;
 
+  @media screen and (max-width: 800px) {
+    width: 100%;
+  }
+
   .checkout-header {
     width: 100%;
     padding: 10px 0;
@@ -13,9 +17,17 @@
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
 
+    @media screen and (max-width: 800px) {
+      width: 85%;
+    }
+
     .header-block {
       text-transform: capitalize;
       width: 23%;
+
+      @media screen and (max-width: 800px) {
+        width: 18%;
+      }
 
       &:last-child {
         width: 8%;
